<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="click_to_login">click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="Logout">Logout</string>
</resources>